--- a/views/pizza.html
+++ b/views/pizza.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>  
+  <meta http-equiv="Cache-control: max-age=86400" content="public">
   <link rel="stylesheet" href="css/style-mini.css">
   <link rel="stylesheet" href="css/bootstrap-grid-mini.css">
 </head>
