--- a/views/pizza.html
+++ b/views/pizza.html
@@ -2,8 +2,8 @@
 <html>
 <head>  
   <meta http-equiv="Cache-control: max-age=86400" content="public">
-  <link rel="stylesheet" href="css/style-mini.css">
-  <link rel="stylesheet" href="css/bootstrap-grid-mini.css">
+  <link rel="stylesheet" href="css/style-mini.css" max-age=10800>
+  <link rel="stylesheet" href="css/bootstrap-grid-mini.css" max-age=10800>
 </head>
 
 <body>
